kubernetes/k8s-lifecycle-prehook/apps/go/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: app
  type: LoadBalancer
status:
  loadBalancer: {}
