kubernetes/k8s-lifecycle-prehook/apps/go/k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: foo.com
      http:
        paths:
          - backend:
              service:
                name: app
                port:
                  number: 8080
            path: /
            pathType: Prefix
